--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <script src="pixi.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" charset="utf-8"> var Game = {}; </script>
         <script src="vec.js" type="text/javascript" charset="utf-8"></script>
+        <script src="entity.js" type="text/javascript" charset="utf-8"></script>
         <script src="bird.js" type="text/javascript" charset="utf-8"></script>
+        <script src="food.js" type="text/javascript" charset="utf-8"></script>
         <script src="main.js" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
