Lowcy, jedzenie, drzewa

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 height: auto;
             }
         </style>
+        <link rel="stylesheet" href="http://cdn.jsdelivr.net/font-hack/2.019/css/hack.min.css" type="text/css" media="all">
     </head>
     <body>
         <script src="pixi.min.js" type="text/javascript" charset="utf-8"></script>
@@ -46,6 +47,9 @@
         <script src="entity.js" type="text/javascript" charset="utf-8"></script>
 
         <script src="bird.js" type="text/javascript" charset="utf-8"></script>
+        <script src="tree.js" type="text/javascript" charset="utf-8"></script>
+        <script src="food.js" type="text/javascript" charset="utf-8"></script>
+        <script src="bullets.js" type="text/javascript" charset="utf-8"></script>
 
         <script src="main.js" type="text/javascript" charset="utf-8"></script>
         <!-- 
