Przenosiny do src

--- a/index.html
+++ b/index.html
@@ -43,18 +43,14 @@
             var Game = {}; 
         </script>
 
-        <script src="vec.js" type="text/javascript" charset="utf-8"></script>
-        <script src="entity.js" type="text/javascript" charset="utf-8"></script>
+        <script src="src/vec.js" type="text/javascript" charset="utf-8"></script>
+        <script src="src/entity.js" type="text/javascript" charset="utf-8"></script>
 
-        <script src="bird.js" type="text/javascript" charset="utf-8"></script>
-        <script src="tree.js" type="text/javascript" charset="utf-8"></script>
-        <script src="food.js" type="text/javascript" charset="utf-8"></script>
-        <script src="bullets.js" type="text/javascript" charset="utf-8"></script>
+        <script src="src/bird.js" type="text/javascript" charset="utf-8"></script>
+        <script src="src/tree.js" type="text/javascript" charset="utf-8"></script>
+        <script src="src/food.js" type="text/javascript" charset="utf-8"></script>
+        <script src="src/bullets.js" type="text/javascript" charset="utf-8"></script>
 
-        <script src="main.js" type="text/javascript" charset="utf-8"></script>
-        <!-- 
-        <script src="food.js" type="text/javascript" charset="utf-8"></script>
-        <script src="main.js" type="text/javascript" charset="utf-8"></script>
-        -->
+        <script src="src/main.js" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
