--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </head>
     <body>
         <script src="pixi.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="howler.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" charset="utf-8"> 
             window.extend = function() {
                 for (var i = 1; i < arguments.length; i++)
